2008-01-25  Juanma Barranquero  <lekktu@gmail.com>

	* allout.el (allout-unload-function): New function.

2008-01-25  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* blank-mode.el: New version 9.0.  New commands to clean up some blank
	problems like trailing blanks.  New faces and regexp for visualizing
	the blank problems.  Doc fix.
	(blank-chars, blank-global-modes, blank-chars-value-list)
	(blank-toggle-option-alist, blank-help-text): Initialization fix.
	(blank-indentation, blank-empty, blank-space-after-tab): New faces.
	(blank-indentation, blank-empty, blank-space-after-tab)
	(blank-indentation-regexp, blank-empty-at-bob-regexp)
	(blank-empty-at-eob-regexp, blank-space-after-tab-regexp): New options.
	(blank-cleanup, blank-cleanup-region): New commands.
	(blank-color-on): Code fix.

2008-01-25  Sven Joachim  <svenjoac@gmx.de>

	* view.el (kill-buffer-if-not-modified): Don't pass t to
	buffer-modified-p.

2008-01-25  Juanma Barranquero  <lekktu@gmail.com>

	* allout.el (allout-prefix-data): Doc fix.
	(allout-show-current-subtree): Reflow docstring.
	(allout-use-mode-specific-leader, allout-use-hanging-indents)
	(produce-allout-mode-map, allout-overlay-interior-modification-handler)
	(allout-next-heading, allout-previous-heading, allout-rebullet-heading)
	(allout-rebullet-topic, allout-rebullet-topic-grunt, allout-kill-topic)
	(allout-copy-topic-as-kill, allout-listify-exposed)
	(allout-process-exposed, allout-encrypted-key-info)
	(allout-update-passphrase-mnemonic-aids)
	(allout-next-topic-pending-encryption)
	(allout-tests-globally-true): Fix typos in docstrings.

2008-01-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-version-diff): Make sure we shrink the right window.

2008-01-23  Jason Rumney  <jasonr@gnu.org>

	* lpr.el (printer-name): Do not set on MS Windows.

2008-01-21  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* blank-mode.el: Fix a problem of cleaning blank faces when turning off